fix: dialog wrapper not being 100dvh on mobile

--- a/website/src/css/utils.css
+++ b/website/src/css/utils.css
@@ -165,6 +165,7 @@ dialog .dialog__wrapper {
 
   dialog .dialog__wrapper {
     height: unset;
+    max-height: unset;
   }
 }
 
